--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_API_ID=your_telegram_api_id_here
+TELEGRAM_API_HASH=your_telegram_api_hash_here
 GROQ_API_KEY=your_groq_api_key_here
