--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_API_ID=your_telegram_api_id_here
 TELEGRAM_API_HASH=your_telegram_api_hash_here
+TRANSCRIPTION_PROVIDER=groq
 GROQ_API_KEY=your_groq_api_key_here
+DEEPGRAM_API_KEY=your_deepgram_api_key_here
