--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ TELEGRAM_API_HASH=your_telegram_api_hash_here
 TRANSCRIPTION_PROVIDER=groq
 GROQ_API_KEY=your_groq_api_key_here
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
+DEEPGRAM_MODEL=whisper
