Enhance Deepgram integration: add DEEPGRAM_DETECT_LANGUAGE option to .env.example, update README with language detection details, and modify transcriber logic to support automatic language detection during transcription.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ TRANSCRIPTION_PROVIDER=groq
 GROQ_API_KEY=your_groq_api_key_here
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
 DEEPGRAM_MODEL=whisper
+DEEPGRAM_DETECT_LANGUAGE=true
