--- a/.env.example
+++ b/.env.example
@@ -27,8 +27,8 @@ TELEGRAM_API_HASH=your_api_hash_here
 # TELEGRAM_API_HASH_2=b15612639c969c7b7a7b142c273a389f
 #
 # API #3 (opsional - bisa tambah lebih banyak!)
-# TELEGRAM_API_ID_3=your_third_api_id
-# TELEGRAM_API_HASH_3=your_third_api_hash
+TELEGRAM_API_ID_3=24541863
+TELEGRAM_API_HASH_3=a6cef8b428f08905952bbbd9f898e800
 #
 # Tips: Daftar API baru di https://my.telegram.org
 # Setiap API bisa handle ~20-30 downloads per menit
@@ -38,7 +38,7 @@ TELEGRAM_API_HASH=your_api_hash_here
 # TRANSCRIPTION PROVIDER (REQUIRED)
 # ============================================
 
-# Provider: groq atau deepgram
+# Provider: groq, deepgram, atau together
 TRANSCRIPTION_PROVIDER=groq
 
 # Groq API Key (required jika provider=groq)
@@ -52,6 +52,9 @@ DEEPGRAM_MODEL=whisper
 
 # Deepgram auto language detection: true atau false
 DEEPGRAM_DETECT_LANGUAGE=true
+
+# Together AI API Key (required jika provider=together)
+TOGETHER_API_KEY=your_together_api_key_here
 
 # ============================================
 # OPTIMIZATION FEATURES (OPTIONAL)
@@ -139,10 +142,12 @@ AUDIO_COMPRESSION_THRESHOLD_MB=30
 # - AUDIO_USE_STREAMING=true
 
 # LARGE BOT (1000+ users/day):
+# - Use 3-5 Telegram APIs
 # - WEBHOOK_URL=https://yourdomain.com
-# - QUEUE_MAX_WORKERS=10
+# - QUEUE_MAX_WORKERS=15-20
 # - CACHE_TYPE=redis
 # - REDIS_URL=redis://localhost:6379
+# - Multiple transcription providers untuk failover
 
 # ============================================
 # NOTES & TIPS
@@ -161,6 +166,12 @@ AUDIO_COMPRESSION_THRESHOLD_MB=30
 # • Bot otomatis rotate jika satu API kena FloodWait
 # • Session disimpan per-API di ~/.transhades_sessions/
 # • Lihat status dengan command: /status
+#
+# MULTIPLE PROVIDERS:
+# • Groq: Fast, free tier available (whisper-large-v3)
+# • Deepgram: Accurate, supports multiple models
+# • Together AI: Alternative, compatible API
+# • Bot support semua 3 providers - pilih sesuai kebutuhan!
 #
 # CARA TAMBAH API BARU:
 # 1. Buka https://my.telegram.org
